--- a/index.html
+++ b/index.html
@@ -288,5 +288,10 @@
     render();
 </script>
 </body>
+    <footer style="margin-top: 50px; padding-bottom: 20px; text-align: center; border-top: 1px solid #334155; width: 100%;">
+    <p style="color: #64748b; font-size: 12px;">© 2026 MetroSTEM. All Rights Reserved.</p>
+    <a href="about.html" style="color: #38bdf8; text-decoration: none; font-size: 14px; font-weight: bold;">Learn About Our Mission</a>
+    </footer>
+    
   </html>
   
