--- a/index.html
+++ b/index.html
@@ -7,104 +7,113 @@
     <style>
         :root {
             --primary: #38bdf8;
+            --secondary: #2563eb;
             --bg: #020617;
             --surface: #0f172a;
             --text: #f8fafc;
             --muted: #94a3b8;
         }
 
-        /* The "No-Scroll" Framework */
+        /* 100% Screen Height Framework */
         html, body {
             height: 100%;
             margin: 0;
-            overflow: hidden; /* Stops accidental scrolling */
+            overflow: hidden;
             background-color: var(--bg);
             color: var(--text);
             font-family: 'Segoe UI', system-ui, sans-serif;
+            display: flex;
+            flex-direction: column;
         }
 
         #app-wrapper {
             display: flex;
             flex-direction: column;
-            height: 100vh; /* Exactly the height of your screen */
+            width: 100%;
             max-width: 450px;
+            height: 100%;
             margin: 0 auto;
             padding: 10px;
             box-sizing: border-box;
         }
 
-        .header { flex: 0 0 auto; text-align: center; padding-bottom: 10px; }
-        .brand { font-size: 24px; font-weight: 900; color: var(--primary); margin: 0; }
+        .header { flex: 0 0 auto; text-align: center; padding: 5px 0; }
+        .brand { font-size: 26px; font-weight: 900; color: var(--primary); margin: 0; letter-spacing: -1px; }
         .brand span { color: white; }
 
-        /* Flexible Game Board */
-        #game-container {
-            flex: 1 1 auto; /* Takes up all available middle space */
+        /* The Elastic Game Board */
+        #game-area {
+            flex: 1 1 auto; /* Expands to fill middle space */
             display: flex;
             align-items: center;
             justify-content: center;
-            position: relative;
             background: #000;
             border: 2px solid var(--surface);
             border-radius: 12px;
-            overflow: hidden;
+            position: relative;
+            box-shadow: 0 0 20px rgba(56, 189, 248, 0.1);
         }
 
         canvas {
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain;
+            aspect-ratio: 1/1;
+            display: block;
         }
 
-        #info-panel {
+        #info-card {
             flex: 0 0 auto;
             background: var(--surface);
             border-radius: 12px;
-            padding: 10px;
+            padding: 8px 12px;
             margin: 10px 0;
+            min-height: 55px;
             text-align: center;
-            min-height: 60px;
+            border: 1px solid #1e293b;
         }
 
-        .el-name { color: var(--primary); font-weight: 800; font-size: 16px; margin: 0; }
-        .el-fact { color: var(--muted); font-size: 11px; margin: 4px 0 0 0; }
+        .name-tag { color: var(--primary); font-weight: 800; font-size: 15px; margin: 0; text-transform: uppercase; }
+        .fact-tag { color: var(--muted); font-size: 11px; margin: 2px 0 0 0; line-height: 1.3; }
 
-        .btn-start {
+        #action-btn {
             flex: 0 0 auto;
-            background: linear-gradient(135deg, var(--primary), #2563eb);
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
             border: none;
             padding: 12px;
-            border-radius: 50px;
-            font-weight: 700;
+            border-radius: 10px;
+            font-weight: 800;
+            font-size: 16px;
             margin-bottom: 10px;
+            cursor: pointer;
         }
 
-        /* Compact Controls */
-        .controls {
+        /* Compact Mobile Controller */
+        .dpad {
             flex: 0 0 auto;
             display: grid;
             grid-template-areas: ". up ." "left . right" ". down .";
             gap: 8px;
             justify-content: center;
-            padding-bottom: 10px;
+            padding-bottom: 5px;
         }
 
-        .btn-dir {
-            width: 55px;
-            height: 55px;
+        .btn {
+            width: 58px;
+            height: 58px;
             background: var(--surface);
             border: 1px solid #334155;
             color: var(--primary);
-            border-radius: 15px;
-            font-size: 20px;
+            border-radius: 12px;
+            font-size: 22px;
             display: flex;
             align-items: center;
             justify-content: center;
             touch-action: manipulation;
+            -webkit-tap-highlight-color: transparent;
         }
-        
-        .btn-dir:active { background: var(--primary); color: white; }
+
+        .btn:active { background: var(--primary); color: white; transform: scale(0.95); }
     </style>
 </head>
 <body>
@@ -114,22 +123,22 @@
         <h1 class="brand">METRO<span>STEM</span></h1>
     </div>
 
-    <div id="game-container">
+    <div id="game-area">
         <canvas id="gameCanvas" width="400" height="400"></canvas>
     </div>
 
-    <div id="info-panel">
-        <div id="target-name" class="el-name">READY PILOT</div>
-        <div id="target-fact" class="el-fact">Capture Oxygen to begin your mission.</div>
+    <div id="info-card">
+        <div id="el-name" class="name-tag">READY PILOT</div>
+        <div id="el-fact" class="fact-tag">Collect elements to build your atomic chain.</div>
     </div>
 
-    <button id="action-btn" class="btn-start" onclick="toggleGame()">START MISSION</button>
+    <button id="action-btn" onclick="toggleGame()">START MISSION</button>
 
-    <div class="controls">
-        <button class="btn-dir" style="grid-area: up" ontouchstart="setDir('up')">▲</button>
-        <button class="btn-dir" style="grid-area: left" ontouchstart="setDir('left')">◀</button>
-        <button class="btn-dir" style="grid-area: right" ontouchstart="setDir('right')">▶</button>
-        <button class="btn-dir" style="grid-area: down" ontouchstart="setDir('down')">▼</button>
+    <div class="dpad">
+        <button class="btn" style="grid-area: up" ontouchstart="setDir('up')">▲</button>
+        <button class="btn" style="grid-area: left" ontouchstart="setDir('left')">◀</button>
+        <button class="btn" style="grid-area: right" ontouchstart="setDir('right')">▶</button>
+        <button class="btn" style="grid-area: down" ontouchstart="setDir('down')">▼</button>
     </div>
 </div>
 
@@ -137,66 +146,100 @@
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
     const actionBtn = document.getElementById('action-btn');
-    const nameLabel = document.getElementById('target-name');
-    const factLabel = document.getElementById('target-fact');
+    const nameLabel = document.getElementById('el-name');
+    const factLabel = document.getElementById('el-fact');
 
     const elements = [
-        {s: "O", n: "Oxygen", c: "#f87171", f: "Necessary for life and fire combustion."},
-        {s: "H", n: "Hydrogen", c: "#38bdf8", f: "The most abundant element in the universe."},
-        {s: "He", n: "Helium", c: "#c084fc", f: "Used in balloons and high-tech cooling."}
+        {s: "H", n: "Hydrogen", c: "#f87171", f: "Most abundant element in the universe."},
+        {s: "He", n: "Helium", c: "#c084fc", f: "Used in balloons and high-tech cooling."},
+        {s: "Li", n: "Lithium", c: "#fbbf24", f: "Powers modern batteries for EVs."},
+        {s: "Be", n: "Beryllium", c: "#fbbf24", f: "Used in space telescopes and mirrors."},
+        {s: "B", n: "Boron", c: "#4ade80", f: "Found in fiberglass and rocket fuel ignite."},
+        {s: "C", n: "Carbon", c: "#f87171", f: "The foundation of all known life."},
+        {s: "N", n: "Nitrogen", c: "#f87171", f: "Makes up 78% of the Earth's atmosphere."},
+        {s: "O", n: "Oxygen", c: "#f87171", f: "Essential for life and fire combustion."}
     ];
 
     let snake = [{x: 200, y: 200}], dir = 'right', nextDir = 'right';
-    let food = {x: 100, y: 100}, idx = 0, running = false, loop = null;
+    let food = {x: 100, y: 100}, idx = 0, tailSym = [], tailCol = [];
+    let running = false, gameLoop = null;
+
+    function speak(t) {
+        window.speechSynthesis.cancel();
+        const u = new SpeechSynthesisUtterance(t);
+        u.lang = 'en-US'; u.rate = 1.1;
+        window.speechSynthesis.speak(u);
+    }
 
     function render() {
-        ctx.fillStyle = "black";
+        ctx.fillStyle = "#000";
         ctx.fillRect(0, 0, 400, 400);
-        
-        // Target
+
+        // Render Food/Target
         ctx.fillStyle = elements[idx].c;
         ctx.fillRect(food.x, food.y, 20, 20);
-        ctx.fillStyle = "black"; ctx.font = "bold 12px Arial";
-        ctx.fillText(elements[idx].s, food.x+4, food.y+15);
+        ctx.fillStyle = "#000"; ctx.font = "bold 13px Arial"; ctx.textAlign = "center";
+        ctx.fillText(elements[idx].s, food.x + 10, food.y + 15);
 
-        // Snake
+        // Render Snake with Symbols
         snake.forEach((p, i) => {
-            ctx.fillStyle = i === 0 ? "white" : "#334155";
+            ctx.fillStyle = (i === 0) ? "#fff" : (tailCol[i-1] || "#334155");
             ctx.fillRect(p.x, p.y, 19, 19);
+            if (i > 0 && tailSym[i-1]) {
+                ctx.fillStyle = "rgba(0,0,0,0.6)"; ctx.font = "bold 9px Arial";
+                ctx.fillText(tailSym[i-1], p.x + 10, p.y + 14);
+            }
         });
     }
 
     function update() {
         dir = nextDir;
         let h = {...snake[0]};
-        if(dir === 'up') h.y -= 20; if(dir === 'down') h.y += 20;
-        if(dir === 'left') h.x -= 20; if(dir === 'right') h.x += 20;
+        if (dir === 'up') h.y -= 20; if (dir === 'down') h.y += 20;
+        if (dir === 'left') h.x -= 20; if (dir === 'right') h.x += 20;
 
-        if(h.x < 0 || h.x >= 400 || h.y < 0 || h.y >= 400) return reset();
+        if (h.x < 0 || h.x >= 400 || h.y < 0 || h.y >= 400 || snake.some(p => p.x === h.x && p.y === h.y)) {
+            gameOver(); return;
+        }
 
         snake.unshift(h);
-        if(h.x === food.x && h.y === food.y) {
+        if (h.x === food.x && h.y === food.y) {
             nameLabel.innerText = elements[idx].n.toUpperCase();
             factLabel.innerText = elements[idx].f;
+            speak(elements[idx].n + ". " + elements[idx].f);
+            tailSym.unshift(elements[idx].s);
+            tailCol.unshift(elements[idx].c);
             idx = (idx + 1) % elements.length;
-            food = {x: Math.floor(Math.random()*19)*20, y: Math.floor(Math.random()*19)*20};
+            food = { x: Math.floor(Math.random()*19)*20, y: Math.floor(Math.random()*19)*20 };
         } else { snake.pop(); }
         render();
     }
 
-    function setDir(d) { nextDir = d; }
+    function setDir(d) {
+        if (d === 'up' && dir !== 'down') nextDir = 'up';
+        if (d === 'down' && dir !== 'up') nextDir = 'down';
+        if (d === 'left' && dir !== 'right') nextDir = 'left';
+        if (d === 'right' && dir !== 'left') nextDir = 'right';
+    }
 
-    function reset() {
-        clearInterval(loop); running = false;
-        actionBtn.innerText = "START MISSION";
-        snake = [{x: 200, y: 200}]; render();
+    function gameOver() {
+        clearInterval(gameLoop); running = false;
+        speak("Mission Over");
+        actionBtn.innerText = "RESTART MISSION";
     }
 
     function toggleGame() {
-        if(running) reset();
-        else {
+        if (running) {
+            clearInterval(gameLoop); running = false;
+            actionBtn.innerText = "RESUME MISSION";
+        } else {
+            if (actionBtn.innerText.includes("RESTART")) {
+                snake = [{x: 200, y: 200}]; idx = 0; tailSym = []; tailCol = [];
+                dir = 'right'; nextDir = 'right';
+            }
             running = true; actionBtn.innerText = "ABORT";
-            loop = setInterval(update, 200);
+            gameLoop = setInterval(update, 200);
+            speak("Systems Online. Find " + elements[idx].n);
         }
     }
     render();
