--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             --muted: #94a3b8;
         }
 
+        /* Strict No-Scroll Framework */
         html, body {
             height: 100%;
             margin: 0;
@@ -39,6 +40,7 @@
         .brand { font-size: 20px; font-weight: 900; color: var(--primary); margin: 0; }
         .brand span { color: white; }
 
+        /* Elastic Game Area */
         #game-area {
             flex: 1 1 auto;
             display: flex;
@@ -65,7 +67,7 @@
             border-radius: 8px;
             padding: 4px 8px;
             margin: 4px 0;
-            min-height: 40px;
+            min-height: 42px;
             text-align: center;
             border: 1px solid #1e293b;
         }
@@ -86,6 +88,7 @@
             cursor: pointer;
         }
 
+        /* Compact Controller */
         .dpad {
             flex: 0 0 auto;
             display: grid;
@@ -125,7 +128,7 @@
 
     <div id="info-card">
         <div id="el-name" class="name-tag">READY PILOT</div>
-        <div id="el-fact" class="fact-tag">Collect elements to build your atomic chain.</div>
+        <div id="el-fact" class="fact-tag">Collect all 54 main-group elements.</div>
     </div>
 
     <button id="action-btn" onclick="toggleGame()">START MISSION</button>
@@ -145,17 +148,58 @@
     const nameLabel = document.getElementById('el-name');
     const factLabel = document.getElementById('el-fact');
 
+    /* FULL 54 MAIN GROUP ELEMENTS DATASET */
     const elements = [
         {an: 1, s: "H", n: "Hydrogen", c: "#f87171", f: "Most abundant element in the universe."},
         {an: 2, s: "He", n: "Helium", c: "#c084fc", f: "Inert gas used in balloons and cooling."},
         {an: 3, s: "Li", n: "Lithium", c: "#fbbf24", f: "Lightest metal, used in EV batteries."},
-        {an: 4, s: "Be", n: "Beryllium", c: "#fbbf24", f: "Strong, lightweight metal for aerospace."},
+        {an: 4, s: "Be", n: "Beryllium", c: "#94a3b8", f: "Strong, lightweight metal for aerospace."},
         {an: 5, s: "B", n: "Boron", c: "#4ade80", f: "Used in glass and as a plant nutrient."},
         {an: 6, s: "C", n: "Carbon", c: "#f87171", f: "The essential building block of life."},
         {an: 7, s: "N", n: "Nitrogen", c: "#f87171", f: "Makes up 78% of the Earth's atmosphere."},
         {an: 8, s: "O", n: "Oxygen", c: "#f87171", f: "Essential for respiration and combustion."},
         {an: 9, s: "F", n: "Fluorine", c: "#4ade80", f: "The most reactive chemical element."},
-        {an: 10, s: "Ne", n: "Neon", c: "#c084fc", f: "Noble gas used in bright signs."}
+        {an: 10, s: "Ne", n: "Neon", c: "#c084fc", f: "Noble gas used in bright signs."},
+        {an: 11, s: "Na", n: "Sodium", c: "#fbbf24", f: "Highly reactive metal found in table salt."},
+        {an: 12, s: "Mg", n: "Magnesium", c: "#fbbf24", f: "Used in lightweight alloys and flares."},
+        {an: 13, s: "Al", n: "Aluminum", c: "#94a3b8", f: "Used in cans, foil, and airplane parts."},
+        {an: 14, s: "Si", n: "Silicon", c: "#4ade80", f: "Key component in computer chips and glass."},
+        {an: 15, s: "P", n: "Phosphorus", c: "#f87171", f: "Essential for DNA and bone formation."},
+        {an: 16, s: "S", n: "Sulfur", c: "#f87171", f: "Used in gunpowder, matches, and rubber."},
+        {an: 17, s: "Cl", n: "Chlorine", c: "#4ade80", f: "Used to purify water and in bleach."},
+        {an: 18, s: "Ar", n: "Argon", c: "#c084fc", f: "Inert gas used in light bulbs and welding."},
+        {an: 19, s: "K", n: "Potassium", c: "#fbbf24", f: "Vital for nerve function and fertilizers."},
+        {an: 20, s: "Ca", n: "Calcium", c: "#fbbf24", f: "Essential for strong bones and teeth."},
+        {an: 31, s: "Ga", n: "Gallium", c: "#94a3b8", f: "Melts in your hand; used in electronics."},
+        {an: 32, s: "Ge", n: "Germanium", c: "#4ade80", f: "Semiconductor used in fiber optics."},
+        {an: 33, s: "As", n: "Arsenic", c: "#4ade80", f: "Toxic metalloid used in semiconductors."},
+        {an: 34, s: "Se", n: "Selenium", c: "#f87171", f: "Used in glass-making and solar cells."},
+        {an: 35, s: "Br", n: "Bromine", c: "#4ade80", f: "The only liquid nonmetal at room temp."},
+        {an: 36, s: "Kr", n: "Krypton", c: "#c084fc", f: "Noble gas used in flash bulbs."},
+        {an: 37, s: "Rb", n: "Rubidium", c: "#fbbf24", f: "Used in atomic clocks and laser cooling."},
+        {an: 38, s: "Sr", n: "Strontium", c: "#fbbf24", f: "Gives fireworks their deep red color."},
+        {an: 49, s: "In", n: "Indium", c: "#94a3b8", f: "Used in touchscreens and LCD displays."},
+        {an: 50, s: "Sn", n: "Tin", c: "#94a3b8", f: "Used for plating steel cans for food."},
+        {an: 51, s: "Sb", n: "Antimony", c: "#4ade80", f: "Used in flame retardants and batteries."},
+        {an: 52, s: "Te", n: "Tellurium", c: "#4ade80", f: "Used in alloys and solar panels."},
+        {an: 53, s: "I", n: "Iodine", c: "#4ade80", f: "Essential for thyroid health and antiseptics."},
+        {an: 54, s: "Xe", n: "Xenon", c: "#c084fc", f: "Noble gas used in specialized lamps."},
+        {an: 55, s: "Cs", n: "Cesium", c: "#fbbf24", f: "Most reactive metal; used in atomic clocks."},
+        {an: 56, s: "Ba", n: "Barium", c: "#fbbf24", f: "Used in drilling fluids and X-ray imaging."},
+        {an: 81, s: "Tl", n: "Thallium", c: "#94a3b8", f: "Used in low-temp thermometers."},
+        {an: 82, s: "Pb", n: "Lead", c: "#94a3b8", f: "Dense metal used in shields and batteries."},
+        {an: 83, s: "Bi", n: "Bismuth", c: "#94a3b8", f: "Brittle metal used in medicine and alloys."},
+        {an: 84, s: "Po", n: "Polonium", c: "#4ade80", f: "Highly radioactive metalloid."},
+        {an: 85, s: "At", n: "Astatine", c: "#4ade80", f: "Rarest naturally occurring element on Earth."},
+        {an: 86, s: "Rn", n: "Radon", c: "#c084fc", f: "Radioactive noble gas from soil decay."},
+        {an: 87, s: "Fr", n: "Francium", c: "#fbbf24", f: "Highly unstable radioactive alkali metal."},
+        {an: 88, s: "Ra", n: "Radium", c: "#fbbf24", f: "Used for glow-in-the-dark paints."},
+        {an: 113, s: "Nh", n: "Nihonium", c: "#94a3b8", f: "Synthetic element named after Japan."},
+        {an: 114, s: "Fl", n: "Flerovium", c: "#94a3b8", f: "Superheavy synthetic radioactive element."},
+        {an: 115, s: "Mc", n: "Moscovium", c: "#94a3b8", f: "Synthetic element named after Moscow."},
+        {an: 116, s: "Lv", n: "Livermorium", c: "#94a3b8", f: "Synthetic element named after California."},
+        {an: 117, s: "Ts", n: "Tennessine", c: "#4ade80", f: "Synthetic halogen named after Tennessee."},
+        {an: 118, s: "Og", n: "Oganesson", c: "#c084fc", f: "The heaviest element on the periodic table."}
     ];
 
     let snake = [{x: 200, y: 200}], dir = 'right', nextDir = 'right';
@@ -241,4 +285,4 @@
     render();
 </script>
 </body>
-</html
+</html>
