--- a/index.html
+++ b/index.html
@@ -333,4 +333,13 @@
     render();
 </script>
 </body>
+    <footer style="margin-top: 20px; padding: 10px; text-align: center; border-top: 1px solid #1e293b; flex: 0 0 auto;">
+    <div style="margin-bottom: 5px;">
+        <a href="about.html" style="color: #38bdf8; text-decoration: none; font-size: 11px; margin: 0 10px;">About Us</a>
+        <a href="privacy.html" style="color: #38bdf8; text-decoration: none; font-size: 11px; margin: 0 10px;">Privacy Policy</a>
+        <a href="terms.html" style="color: #38bdf8; text-decoration: none; font-size: 11px; margin: 0 10px;">Terms of Service</a>
+    </div>
+    <p style="color: #64748b; font-size: 10px; margin: 0;">© 2026 MetroSTEM. Built for Future Scientists.</p>
+    </footer>
+    
 </html>
