--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             --muted: #94a3b8;
         }
 
+        /* Allow the body to scroll for the footer */
         html, body {
-            min-height: 100%;
             margin: 0;
             padding: 0;
             background-color: var(--bg);
@@ -25,129 +25,143 @@
             overflow-y: auto;
         }
 
-        #app-wrapper {
+        /* GAME VIEW: Strictly 100% of the visible screen */
+        #game-view {
             display: flex;
             flex-direction: column;
             width: 100%;
             max-width: 420px;
-            min-height: 100vh;
+            height: 100dvh; /* Dynamic Viewport Height */
             margin: 0 auto;
-            padding: 10px;
+            padding: 4px 10px;
             box-sizing: border-box;
+            overflow: hidden; /* No scrolling allowed inside the game view */
         }
 
-        .header { flex: 0 0 auto; text-align: center; padding: 10px 0; }
-        .brand { font-size: 24px; font-weight: 900; color: var(--primary); margin: 0; }
+        .header { flex: 0 0 auto; text-align: center; padding: 2px 0; }
+        .brand { font-size: 20px; font-weight: 900; color: var(--primary); margin: 0; }
         .brand span { color: white; }
 
+        /* The canvas area will now shrink to fit whatever space is left */
         #game-area {
-            flex: 0 0 auto;
+            flex: 1 1 auto; 
             display: flex;
             align-items: center;
             justify-content: center;
             background: #000;
             border: 2px solid var(--surface);
-            border-radius: 12px;
+            border-radius: 10px;
             position: relative;
-            margin-bottom: 10px;
-            aspect-ratio: 1/1;
+            overflow: hidden;
+            min-height: 0; /* Critical: Allows flex item to shrink */
         }
 
-        canvas { width: 100%; height: 100%; display: block; }
+        canvas {
+            max-width: 100%;
+            max-height: 100%;
+            aspect-ratio: 1/1;
+            display: block;
+        }
 
         #info-card {
+            flex: 0 0 auto;
             background: var(--surface);
-            border-radius: 10px;
-            padding: 12px;
-            margin-bottom: 10px;
+            border-radius: 8px;
+            padding: 4px;
+            margin: 6px 0;
+            min-height: 40px;
             text-align: center;
             border: 1px solid #1e293b;
-            min-height: 45px;
         }
 
-        .learning-active { border-color: var(--primary) !important; box-shadow: 0 0 15px rgba(56, 189, 248, 0.4); }
-        .name-tag { color: var(--primary); font-weight: 800; font-size: 16px; margin: 0; text-transform: uppercase; }
-        .fact-tag { color: var(--muted); font-size: 11px; margin: 4px 0 0 0; line-height: 1.4; }
+        .name-tag { color: var(--primary); font-weight: 800; font-size: 14px; margin: 0; text-transform: uppercase; }
+        .fact-tag { color: var(--muted); font-size: 10px; margin: 2px 0 0 0; line-height: 1.1; }
 
         #action-btn {
+            flex: 0 0 auto;
             background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
             border: none;
-            padding: 14px;
-            border-radius: 10px;
+            padding: 10px;
+            border-radius: 8px;
             font-weight: 800;
-            font-size: 16px;
-            margin-bottom: 15px;
+            font-size: 14px;
+            margin-bottom: 8px;
             cursor: pointer;
         }
 
         .controls-row {
+            flex: 0 0 auto;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
-            margin-bottom: 40px;
+            gap: 15px;
+            padding-bottom: 10px; /* Space at the very bottom of the screen */
         }
 
-        .dpad { display: grid; grid-template-areas: ". up ." "left . right" ". down ."; gap: 8px; }
+        .dpad { display: grid; grid-template-areas: ". up ." "left . right" ". down ."; gap: 6px; }
         .btn {
-            width: 55px;
-            height: 55px;
+            width: 50px;
+            height: 50px;
             background: var(--surface);
             border: 1px solid #334155;
             color: var(--primary);
-            border-radius: 12px;
-            font-size: 22px;
+            border-radius: 10px;
+            font-size: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
             touch-action: manipulation;
         }
 
-        .slider-box { display: flex; flex-direction: column; align-items: center; gap: 8px; }
-        .speed-label { font-size: 10px; color: var(--muted); font-weight: bold; }
-        input[type=range].vertical { -webkit-appearance: slider-vertical; width: 12px; height: 100px; }
+        .slider-box { display: flex; flex-direction: column; align-items: center; gap: 4px; }
+        .speed-label { font-size: 9px; color: var(--muted); font-weight: bold; }
+        input[type=range].vertical { -webkit-appearance: slider-vertical; width: 10px; height: 90px; }
 
+        /* FOOTER: Pushed below the 100vh game view */
         footer {
-            margin-top: auto;
+            width: 100%;
+            max-width: 420px;
+            margin: 0 auto;
             text-align: center;
-            padding: 20px 0;
+            padding: 30px 0;
             border-top: 1px solid #1e293b;
+            background-color: var(--bg);
         }
-        .footer-links { margin-bottom: 8px; }
         .footer-links a { color: var(--primary); text-decoration: none; font-size: 12px; margin: 0 10px; }
-        .footer-copy { color: #64748b; font-size: 10px; }
+        .footer-copy { color: #64748b; font-size: 10px; margin-top: 10px; }
     </style>
 </head>
 <body>
 
-<div id="app-wrapper">
-    <div class="header">
-        <h1 class="brand">METRO<span>STEM</span></h1>
-    </div>
-
-    <div id="game-area">
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
-    </div>
-
-    <div id="info-card">
-        <div id="el-name" class="name-tag">READY PILOT</div>
-        <div id="el-fact" class="fact-tag">Master 60 elements to win. Scroll for info.</div>
-    </div>
-
-    <button id="action-btn" onclick="toggleGame()">START MISSION</button>
-
-    <div class="controls-row">
-        <div class="dpad">
-            <button class="btn" style="grid-area: up" ontouchstart="setDir('up')">▲</button>
-            <button class="btn" style="grid-area: left" ontouchstart="setDir('left')">◀</button>
-            <button class="btn" style="grid-area: right" ontouchstart="setDir('right')">▶</button>
-            <button class="btn" style="grid-area: down" ontouchstart="setDir('down')">▼</button>
+    <div id="game-view">
+        <div class="header">
+            <h1 class="brand">METRO<span>STEM</span></h1>
         </div>
 
-        <div class="slider-box">
-            <span class="speed-label">Speed</span>
-            <input type="range" min="100" max="600" value="350" class="vertical" id="speedSlider" oninput="updateInterval()">
+        <div id="game-area">
+            <canvas id="gameCanvas" width="400" height="400"></canvas>
+        </div>
+
+        <div id="info-card">
+            <div id="el-name" class="name-tag">READY PILOT</div>
+            <div id="el-fact" class="fact-tag">Master 60 elements. Scroll down for legal.</div>
+        </div>
+
+        <button id="action-btn" onclick="toggleGame()">START MISSION</button>
+
+        <div class="controls-row">
+            <div class="dpad">
+                <button class="btn" style="grid-area: up" ontouchstart="setDir('up')">▲</button>
+                <button class="btn" style="grid-area: left" ontouchstart="setDir('left')">◀</button>
+                <button class="btn" style="grid-area: right" ontouchstart="setDir('right')">▶</button>
+                <button class="btn" style="grid-area: down" ontouchstart="setDir('down')">▼</button>
+            </div>
+
+            <div class="slider-box">
+                <span class="speed-label">Speed</span>
+                <input type="range" min="100" max="600" value="350" class="vertical" id="speedSlider" oninput="updateInterval()">
+            </div>
         </div>
     </div>
 
@@ -159,9 +173,9 @@
         </div>
         <p class="footer-copy">© 2026 MetroSTEM. Dedicated to Science Education.</p>
     </footer>
-</div>
 
 <script>
+    // [The Game Logic remains identical to ensure consistency]
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
     const actionBtn = document.getElementById('action-btn');
@@ -170,63 +184,60 @@
     const infoCard = document.getElementById('info-card');
     const speedSlider = document.getElementById('speedSlider');
 
-    /* UPDATED DATASET: 60 ELEMENTS (Main Groups + Transition Metals) */
     const elements = [
         {an: 1, s: "H", n: "Hydrogen", c: "#f87171", f: "Most abundant element in the universe."},
-        {an: 2, s: "He", n: "Helium", c: "#c084fc", f: "Inert gas used in balloons and cooling."},
-        {an: 3, s: "Li", n: "Lithium", c: "#fbbf24", f: "Used in lightweight EV batteries."},
-        {an: 4, s: "Be", n: "Beryllium", c: "#fbbf24", f: "Strong metal used in space telescopes."},
-        {an: 5, s: "B", n: "Boron", c: "#4ade80", f: "Found in fiberglass and plant nutrients."},
+        {an: 2, s: "He", n: "Helium", c: "#c084fc", f: "Inert gas used in balloons."},
+        {an: 3, s: "Li", n: "Lithium", c: "#fbbf24", f: "Lightest metal, used in EV batteries."},
+        {an: 4, s: "Be", n: "Beryllium", c: "#94a3b8", f: "Strong metal for aerospace."},
+        {an: 5, s: "B", n: "Boron", c: "#4ade80", f: "Used in glass and plant nutrients."},
         {an: 6, s: "C", n: "Carbon", c: "#f87171", f: "The foundation of all known life."},
-        {an: 7, s: "N", n: "Nitrogen", c: "#f87171", f: "Makes up 78% of Earth's atmosphere."},
+        {an: 7, s: "N", n: "Nitrogen", c: "#f87171", f: "Makes up 78% of the atmosphere."},
         {an: 8, s: "O", n: "Oxygen", c: "#f87171", f: "Essential for life and combustion."},
-        {an: 9, s: "F", n: "Fluorine", c: "#4ade80", f: "The most reactive chemical element."},
+        {an: 9, s: "F", n: "Fluorine", c: "#4ade80", f: "Most reactive chemical element."},
         {an: 10, s: "Ne", n: "Neon", c: "#c084fc", f: "Noble gas used in bright signs."},
-        {an: 11, s: "Na", n: "Sodium", c: "#fbbf24", f: "Reactive metal found in table salt."},
-        {an: 12, s: "Mg", n: "Magnesium", c: "#fbbf24", f: "Used in lightweight alloys and flares."},
-        {an: 13, s: "Al", n: "Aluminum", c: "#94a3b8", f: "Used in cans, foil, and airplanes."},
+        {an: 11, s: "Na", n: "Sodium", c: "#fbbf24", f: "Reactive metal found in salt."},
+        {an: 12, s: "Mg", n: "Magnesium", c: "#fbbf24", f: "Used in alloys and flares."},
+        {an: 13, s: "Al", n: "Aluminum", c: "#94a3b8", f: "Used in cans and airplane parts."},
         {an: 14, s: "Si", n: "Silicon", c: "#4ade80", f: "Key in computer chips and glass."},
-        {an: 15, s: "P", n: "Phosphorus", c: "#f87171", f: "Essential for DNA and bone formation."},
-        {an: 16, s: "S", n: "Sulfur", c: "#f87171", f: "Used in gunpowder and matches."},
-        {an: 17, s: "Cl", n: "Chlorine", c: "#4ade80", f: "Used to purify water and in bleach."},
+        {an: 15, s: "P", n: "Phosphorus", c: "#f87171", f: "Essential for DNA and bones."},
+        {an: 16, s: "S", n: "Sulfur", c: "#f87171", f: "Used in gunpowder and rubber."},
+        {an: 17, s: "Cl", n: "Chlorine", c: "#4ade80", f: "Used to purify water and bleach."},
         {an: 18, s: "Ar", n: "Argon", c: "#c084fc", f: "Inert gas used in light bulbs."},
-        {an: 19, s: "K", n: "Potassium", c: "#fbbf24", f: "Vital for nerve and heart function."},
-        {an: 20, s: "Ca", n: "Calcium", c: "#fbbf24", f: "Essential for strong bones and teeth."},
-        /* TRANSITION METALS ADDED */
+        {an: 19, s: "K", n: "Potassium", c: "#fbbf24", f: "Vital for nerve function."},
+        {an: 20, s: "Ca", n: "Calcium", c: "#fbbf24", f: "Essential for strong bones."},
         {an: 21, s: "Sc", n: "Scandium", c: "#94a3b8", f: "Used in aerospace and sports gear."},
         {an: 22, s: "Ti", n: "Titanium", c: "#94a3b8", f: "Strong as steel but 45% lighter."},
         {an: 24, s: "Cr", n: "Chromium", c: "#94a3b8", f: "Makes steel stainless and shiny."},
-        {an: 25, s: "Mn", n: "Manganese", c: "#94a3b8", f: "Essential for clear glass and steel."},
+        {an: 25, s: "Mn", n: "Manganese", c: "#94a3b8", f: "Essential for glass and steel."},
         {an: 26, s: "Fe", n: "Iron", c: "#94a3b8", f: "The most used metal on Earth."},
         {an: 27, s: "Co", n: "Cobalt", c: "#94a3b8", f: "Used in magnets and blue pigments."},
         {an: 28, s: "Ni", n: "Nickel", c: "#94a3b8", f: "Used in coins and batteries."},
         {an: 29, s: "Cu", n: "Copper", c: "#94a3b8", f: "Excellent conductor of electricity."},
-        {an: 30, s: "Zn", n: "Zinc", c: "#94a3b8", f: "Prevents rust and is in sunscreen."},
-        {an: 79, s: "Au", n: "Gold", c: "#fbbf24", f: "Noble metal used in jewelry and electronics."},
-        /* RESUMING PREVIOUS SET */
-        {an: 31, s: "Ga", n: "Gallium", c: "#94a3b8", f: "Melts in your hand; used in electronics."},
-        {an: 32, s: "Ge", n: "Germanium", c: "#4ade80", f: "Semiconductor used in fiber optics."},
+        {an: 30, s: "Zn", n: "Zinc", c: "#94a3b8", f: "Prevents rust; used in sunscreen."},
+        {an: 79, s: "Au", n: "Gold", c: "#fbbf24", f: "Noble metal used in jewelry."},
+        {an: 31, s: "Ga", n: "Gallium", c: "#94a3b8", f: "Melts in your hand."},
+        {an: 32, s: "Ge", n: "Germanium", c: "#4ade80", f: "Used in fiber optics."},
         {an: 33, s: "As", n: "Arsenic", c: "#4ade80", f: "Toxic metalloid for semiconductors."},
-        {an: 34, s: "Se", n: "Selenium", c: "#f87171", f: "Used in glass-making and solar cells."},
+        {an: 34, s: "Se", n: "Selenium", c: "#f87171", f: "Used in solar cells."},
         {an: 35, s: "Br", n: "Bromine", c: "#4ade80", f: "Only liquid nonmetal at room temp."},
         {an: 36, s: "Kr", n: "Krypton", c: "#c084fc", f: "Noble gas used in flash bulbs."},
         {an: 37, s: "Rb", n: "Rubidium", c: "#fbbf24", f: "Used in atomic clocks."},
         {an: 38, s: "Sr", n: "Strontium", c: "#fbbf24", f: "Gives fireworks their red color."},
-        {an: 49, s: "In", n: "Indium", c: "#94a3b8", f: "Used in touchscreens and LCDs."},
+        {an: 49, s: "In", n: "Indium", c: "#94a3b8", f: "Used in touchscreens."},
         {an: 50, s: "Sn", n: "Tin", c: "#94a3b8", f: "Used to plate steel food cans."},
         {an: 51, s: "Sb", n: "Antimony", c: "#4ade80", f: "Used in flame retardants."},
         {an: 52, s: "Te", n: "Tellurium", c: "#4ade80", f: "Used in alloys and solar panels."},
         {an: 53, s: "I", n: "Iodine", c: "#4ade80", f: "Essential for thyroid health."},
-        {an: 54, s: "Xe", n: "Xenon", c: "#c084fc", f: "Used in specialized high-speed lamps."},
-        {an: 55, s: "Cs", n: "Cesium", c: "#fbbf24", f: "Highly reactive; used in atomic clocks."},
-        {an: 56, s: "Ba", n: "Barium", c: "#fbbf24", f: "Used in drilling and X-ray imaging."},
-        {an: 81, s: "Tl", n: "Thallium", c: "#94a3b8", f: "Used in low-temp thermometers."},
+        {an: 54, s: "Xe", n: "Xenon", c: "#c084fc", f: "Used in specialized lamps."},
+        {an: 55, s: "Cs", n: "Cesium", c: "#fbbf24", f: "Most reactive metal."},
+        {an: 56, s: "Ba", n: "Barium", c: "#fbbf24", f: "Used in X-ray imaging."},
+        {an: 81, s: "Tl", n: "Thallium", c: "#94a3b8", f: "Used in thermometers."},
         {an: 82, s: "Pb", n: "Lead", c: "#94a3b8", f: "Dense metal used in shields."},
         {an: 83, s: "Bi", n: "Bismuth", c: "#94a3b8", f: "Used in medicine and alloys."},
         {an: 84, s: "Po", n: "Polonium", c: "#4ade80", f: "Highly radioactive metalloid."},
         {an: 85, s: "At", n: "Astatine", c: "#4ade80", f: "Rarest naturally occurring element."},
         {an: 86, s: "Rn", n: "Radon", c: "#c084fc", f: "Radioactive gas from soil decay."},
-        {an: 87, s: "Fr", n: "Francium", c: "#fbbf24", f: "Highly unstable radioactive alkali metal."},
+        {an: 87, s: "Fr", n: "Francium", c: "#fbbf24", f: "Highly unstable radioactive metal."},
         {an: 88, s: "Ra", n: "Radium", c: "#fbbf24", f: "Used for glow-in-the-dark paints."},
         {an: 113, s: "Nh", n: "Nihonium", c: "#94a3b8", f: "Synthetic element named after Japan."},
         {an: 114, s: "Fl", n: "Flerovium", c: "#94a3b8", f: "Superheavy radioactive element."},
