--- a/index.html
+++ b/index.html
@@ -165,13 +165,16 @@
         </div>
     </div>
 
-    <footer>
-        <div class="footer-links">
-            <a href="about.html">About</a>
-            <a href="privacy.html">Privacy</a>
-            <a href="terms.html">Terms</a>
+        <footer style="margin-top: 40px; padding: 20px 0; border-top: 1px solid #1e293b; background-color: #020617; text-align: center; flex: 0 0 auto;">
+        <div style="margin-bottom: 12px;">
+            <a href="about.html" style="color: #38bdf8; text-decoration: none; font-size: 13px; margin: 0 10px; font-weight: 500;">About</a>
+            <a href="guide.html" style="color: #38bdf8; text-decoration: none; font-size: 13px; margin: 0 10px; font-weight: 500;">Study Guide</a>
+            <a href="contact.html" style="color: #38bdf8; text-decoration: none; font-size: 13px; margin: 0 10px; font-weight: 500;">Contact Us</a>
+            <a href="privacy.html" style="color: #38bdf8; text-decoration: none; font-size: 13px; margin: 0 10px; font-weight: 500;">Privacy</a>
+            <a href="terms.html" style="color: #38bdf8; text-decoration: none; font-size: 13px; margin: 0 10px; font-weight: 500;">Terms</a>
         </div>
-        <p class="footer-copy">© 2026 MetroSTEM. Dedicated to Science Education.</p>
+        <p style="color: #64748b; font-size: 11px; margin: 5px 0 0 0;">© 2026 MetroSTEM. Dedicated to Science Education.</p>
+        <p style="color: #475569; font-size: 10px; margin: 2px 0 0 0;">Contact: metrostemgame@gmail.com</p>
     </footer>
 
 <script>
