--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
     function speak(t) {
         window.speechSynthesis.cancel();
         const u = new SpeechSynthesisUtterance(t);
-        u.lang = 'en-US'; u.rate = 1.0;
+        u.lang = 'en-US'; 
+        u.rate = 1.0; 
+        u.volume = 1.0; // Programmatic volume set to max
         window.speechSynthesis.speak(u);
     }
 
@@ -323,10 +325,6 @@
         }
     }
     render();
-</script>
-</body>
-</html>
-render();
 </script>
 </body>
 </html>
